cabal-version:      >=1.10
name:               wiwinwlh
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
maintainer:         stephen.m.diehl@gmail.com
author:             Stephen Diehl
build-type:         Simple
extra-source-files: README.md

executable includes
  main-is:          includes.hs
  default-language: Haskell2010
  build-depends:
      base >=4.7 && <5
    , containers
    , pandoc
    , text
    , doctemplates
    , texmath
    , HsYAML
    , doclayout
    , emojis
    , haddock-library
    , jira-wiki-markup
    , pandoc-types
    , skylighting
    , skylighting-core
